<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.scorekeeperapp.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/player" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/secondRootView_margin_top"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/tStyle"
                    android:gravity="center"
                    android:text="@string/teamA"
                    android:textColor="@color/insideTextColor"
                    android:textSize="@dimen/team_text_size" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/score_margin_bottom"
                    android:fontFamily="@string/tStyle"
                    android:gravity="center"
                    android:text="@string/stat"
                    android:textColor="@color/outsideTextColor"
                    android:textSize="@dimen/score_text_size" />

                <Button
                    android:layout_marginLeft="@dimen/margin_left"
                    android:background="@color/background_goal_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/goal_margin_RandL"
                    android:fontFamily="@string/tStyle"
                    android:onClick="addOneGoalForTeamA"
                    android:text="@string/goal"
                    android:textColor="@color/insideTextColor"
                    android:textSize="@dimen/buttons_text_size"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_TandB"
                    android:orientation="horizontal">

                    <Button
                        android:textSize="@dimen/buttons_text_size"
                        android:layout_marginLeft="@dimen/margin_left"
                        android:background="@color/background_corners_button"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:onClick="addCornersTeamA"
                        android:text="@string/corners"
                        android:textColor="@color/insideTextColor"/>

                    <TextView
                        android:id="@+id/corners_team_a"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:gravity="center"
                        android:text="@string/stat"
                        android:textColor="@color/corner_stat_color"
                        android:textSize="@dimen/stats_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin_TandB"
                    android:layout_marginTop="@dimen/layout_margin_TandB"
                    android:orientation="horizontal">

                    <Button
                        android:textSize="@dimen/buttons_text_size"
                        android:layout_marginLeft="@dimen/margin_left"
                        android:background="@color/background_yCards_button"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:onClick="addYellowCardsTeamA"
                        android:text="@string/YCARDS"
                        android:textColor="@color/insideTextColor"/>

                    <TextView
                        android:id="@+id/yellow_cards_a"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:gravity="center"
                        android:text="@string/stat"
                        android:textColor="@color/yCards_stat_color"
                        android:textSize="@dimen/stats_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:textSize="@dimen/buttons_text_size"
                        android:layout_marginLeft="@dimen/margin_left"
                        android:background="@color/background_rCards_button"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:onClick="addRedCardsTeamA"
                        android:text="@string/RCARDS"
                        android:textColor="@color/insideTextColor"/>

                    <TextView
                        android:id="@+id/red_cards_a"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:gravity="center"
                        android:text="@string/stat"
                        android:textColor="@color/rCards_stat_color"
                        android:textSize="@dimen/stats_text_size" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="@dimen/view_width"
                android:layout_height="match_parent"
                android:background="@color/view_background" />

            <LinearLayout
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/tStyle"
                    android:gravity="center"
                    android:text="@string/teamB"
                    android:textColor="@color/insideTextColor"
                    android:textSize="@dimen/team_text_size" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/score_margin_bottom"
                    android:fontFamily="@string/tStyle"
                    android:gravity="center"
                    android:text="@string/stat"
                    android:textColor="@color/outsideTextColor"
                    android:textSize="@dimen/score_text_size" />

                <Button
                    android:textSize="@dimen/buttons_text_size"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/background_goal_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/goal_margin_RandL"
                    android:fontFamily="@string/tStyle"
                    android:onClick="addOneGoalToTeamB"
                    android:text="@string/goal"
                    android:textColor="@color/insideTextColor"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_TandB"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/corners_team_b"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:gravity="center"
                        android:text="@string/stat"
                        android:textColor="@color/corner_stat_color"
                        android:textSize="@dimen/stats_text_size" />

                    <Button
                        android:textSize="@dimen/buttons_text_size"
                        android:layout_marginRight="@dimen/margin_right"
                        android:background="@color/background_corners_button"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:onClick="addCornersTeamB"
                        android:text="@string/corners"
                        android:textColor="@color/insideTextColor"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin_TandB"
                    android:layout_marginTop="@dimen/layout_margin_TandB"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/yellow_cards_b"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:gravity="center"
                        android:text="@string/stat"
                        android:textColor="@color/yCards_stat_color"
                        android:textSize="@dimen/stats_text_size" />

                    <Button
                        android:textSize="@dimen/buttons_text_size"
                        android:layout_marginRight="@dimen/margin_right"
                        android:background="@color/background_yCards_button"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:onClick="addYellowCardsTeamB"
                        android:text="@string/YCARDS"
                        android:textColor="@color/insideTextColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/red_cards_b"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:gravity="center"
                        android:text="@string/stat"
                        android:textColor="@color/rCards_stat_color"
                        android:textSize="@dimen/stats_text_size" />

                    <Button
                        android:textSize="@dimen/buttons_text_size"
                        android:layout_marginRight="@dimen/margin_right"
                        android:background="@color/background_rCards_button"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@string/tStyle"
                        android:onClick="addRedCardsTeamB"
                        android:text="@string/RCARDS"
                        android:textColor="@color/insideTextColor"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:textSize="@dimen/buttons_text_size"
            android:background="@color/background_goal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/reset_margin_bottom"
            android:fontFamily="@string/tStyle"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="@color/insideTextColor"/>
    </RelativeLayout>
</ScrollView>
